More i18n work & Spanish translation

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -371,6 +371,10 @@ page.species.index.heading=Search the {0} for species
 page.species.index.title=Species search | {0}
 
 # Page search specie profile
+search.title.search=Search
+search.autocomplete.placeholder=Search species, datasets, and more...
+search.title.main-btn=Search
+search.for.title=Search for <strong>{0}</strong> returned {1} results.
 search.more=More
 search.resultFine=Refine results
 search.for=Search for
@@ -389,8 +393,10 @@ search.sort.order.ascending=ascending
 search.sort.order.desceding=descending
 search.sort.address=Address here
 search.details.occurrence=Occurrences:
-search.details.view.image=View images of species within this
-search.details.record=Record a sighting/share a photo
+search.details.view.image=View images of species within this {0}
+search.all.records=all records
+search.remove.filter=remove filter
+search.download.taxa.for.your.search=Download a list of taxa for your search
 
 # Page overview
 overview.status.conservation=Conservation Status
@@ -403,16 +409,14 @@ overview.map.occurrence.mapa.attribution.01=Compiled distribution map provided b
 overview.map.occurrence.mapa.attribution.02=data resource not known
 overview.map.submit.photo=Submit a photo
 overview.map.receive.alerts=Receive alerts when new records are added
-overview.datasets.count.have=datasets have 
-overview.datasets.count.provided=provided data to the 
-overview.datasets.count.for=for this
+overview.datasets.have.provided.data=<span class="datasetLabel">datasets have</span> provided data to the {0} for this {1}.
 overview.datasets.lists.01=Browse the list of datasets
 overview.datasets.lists.02=and find organisations you can join if you are interested in participating in a survey for
 overview.datasets.species.of=species of
 overview.datasets.species.like=species like
 
 # Page of gallery
-gallery.titulo=No images available for this taxon
+gallery.title=No images available for this taxon
 gallery.description.01=If you have images for this taxon that you would like to share with
 gallery.description.02=please upload using the upload tools.
 gallery.button.collapse=Collapse
@@ -425,7 +429,7 @@ names.accepted.source=Source
 # Page of classification
 classification.title=Classification
 classification.download.child=Download child taxa of
-classification.download.especies=Download species of
+classification.download.species=Download species of
 classification.search.child=Search for child taxa of
 
 # Page of images
@@ -434,6 +438,8 @@ images.for=Images for
 images.of=Images of
 images.from=from
 images.species=Species images 
+images.load.more=Load more images
+images.more.information.on.this.0=More information on this {0}
 
 # Page of records
 records.list.all.records.button=View list of all occurrence records for this taxon
@@ -443,12 +449,21 @@ records=records
 
 # Page of show
 show.name.authority=Name authority
+show.source=Source
+show.rights.holder=Rights holder
+show.provided.by=Provided by
+show.main.image=Main Image
+show.main.audio=Main Audio
+show.name=Name
+show.attribution=Attribution
+show.licence=Licence
+show.main.video=Main Video
+show.ok=OK
 
 # Page of bhl
 bhl.title.bhl=Biodiversity Heritage Library
 bhl.title.trove=Trove
 bhl.reference.found.bhl=Name references found in the
-bhl.reference.found.bhl.search=Search BHL for references to
 bhl.reference.found.trove=Name references found in
 bhl.search=BHL Search
 bhl.search.bhl=Biodiversity Heritage Library
@@ -459,5 +474,11 @@ data.partners.data.sets=Data sets
 data.partners.data.licenca=Licence
 data.partners.data.records=Records
 
+home=Home
 
+error.url=<a href="{0}/australias-species/">Australia&#39;s species</a>
+error.title=Biodiversity Information Explorer (BIE)
+error.main.title=An error has occurrence | BIE
 
+page.not.found.title=Page Not Found
+page.error.page.not.found.desc=Error: Page Not Found (404)
