--- a/grails-app/i18n/messages_es.properties
+++ b/grails-app/i18n/messages_es.properties
@@ -1,17 +1,17 @@
 site.title=Portal de Datos de GBIF España
 
 label.acceptedName=Nombre aceptado
-label.acceptedName.detail=El nombre que se utiliza para este taxón actualmente
+label.acceptedName.detail=El nombre que se utiliza para este taxon actualmente
 label.classification=Clasificación
 label.common=Común
 label.commonName=Nombre Común
-label.commonName.detail=Nombres vernáculos (no científicos) para este taxón. Estos nombres no tienen porqué ser únicos y múltiples taxones pueden compartir un nombre común.
+label.commonName.detail=Nombres vernáculos (no científicos) para este taxon. Estos nombres no tienen porqué ser únicos y múltiples taxones pueden compartir un nombre común.
 label.countryCode.vernacular=País
 label.countryCode.vernacular.detail=Este nombre se utiliza en un país específico
 label.data-partners=Socio de datos
 label.gallery=Galería
 label.identifier=Identificador
-label.identifier.detail=Los códigos utilizados por diversas fuentes para identificar el taxón y el nombre de taxón. Algunos identificadores son históricos.
+label.identifier.detail=Los códigos utilizados por diversas fuentes para identificar el taxon y el nombre de taxon. Algunos identificadores son históricos.
 label.in=en
 label.indigenous-info=Información indígena
 label.isPlural.vernacular=plural
@@ -41,7 +41,7 @@ label.sex.vernacular.detail=Este nombre se utiliza para referirse a un sexo espe
 label.source=Fuente
 label.source.detail=La organización que proporciona la información
 label.synonym=Sinónimo
-label.synonym.detail=Otros nombres para este taxón
+label.synonym.detail=Otros nombres para este taxon
 label.temporal.vernacular=Rango temporal
 label.temporal.vernacular.detail=Este nombre se utiliza durante un período específico de tiempo o del calendario
 
@@ -80,7 +80,7 @@ facet.imageAvailable=Imagen disponible
 facet.taxonomicStatus=Estado taxonómico
 facet.establishmentMeans=Establecimiento de medias
 facet.datasetName=Juego de datos
-facet.taxonGroup_s=Grupo del taxón
+facet.taxonGroup_s=Grupo del taxon
 
 facet.conservationStatusAUS=Estado de conservación en Australia
 facet.conservationStatusACT=Estado de conservación en ACT
@@ -139,8 +139,8 @@ rank.subseries=Subserie
 rank.subvariety=Subvariedad
 rank.subclass=Subclase
 rank.class=Clase
-rank.suprageneric\ tax_\ of\ undefined\ rank=Taxón supragenérico de categoría indefinida
-rank.suprageneric\ tax.\ of\ undefined\ rank=Taxón supragenérico de categoría indefinida
+rank.suprageneric\ tax_\ of\ undefined\ rank=Taxon supragenérico de categoría indefinida
+rank.suprageneric\ tax.\ of\ undefined\ rank=Taxon supragenérico de categoría indefinida
 rank.supragenericname=Subfamilia
 rank.infraorder=Infraorden
 rank.infraspecific=Infraespecífico
@@ -221,9 +221,9 @@ overview.map.button.records.list=Ver los registros
 overview.map.button.records.simplemap=Ver mapa simple
 overview.map.button.records.map=Ver mapa interactivo
 
-overview.map.button.records.list.title=Ver una lista de los registros para este taxón
-overview.map.button.records.simplemap.title=Ver un mapa simple de los registros para este taxón
-overview.map.button.records.map.title=Analizar los datos de este taxón utilizando herramientas de mapa avanzadas
+overview.map.button.records.list.title=Ver una lista de los registros para este taxon
+overview.map.button.records.simplemap.title=Ver un mapa simple de los registros para este taxon
+overview.map.button.records.map.title=Analizar los datos de este taxon utilizando herramientas de mapa avanzadas
 
 show.json=JSON
 show.rdf=RDF
@@ -252,7 +252,7 @@ identifierFormat.url.detail=Un identificador que es una URL resoluble
 identifierStatus.current=actual
 identifierStatus.current.detail=Un identificador en uso actualmente
 identifierStatus.discarded=descartado
-identifierStatus.discarded.detail=Un identificador de un taxón descartado en el procesamiento, que se ha asignado a este taxón
+identifierStatus.discarded.detail=Un identificador de un taxon descartado en el procesamiento, que se ha asignado a este taxon
 identifierStatus.historical=histórico
 identifierStatus.historical.detail=Un identificador que no está en uso actualmente
 identifierStatus.replaced=reemplazado
@@ -261,17 +261,17 @@ identifierStatus.unknown=desconocido
 identifierStatus.unknown.detail=Un identificador de estatus incierto
 
 identifierType.name=nombre científico
-identifierType.name.detail=Un identificador del nombre científico de un taxón
-identifierType.taxon=taxón
-identifierType.taxon.detail=Un identificador de la información actual sobre un taxón
-identifierType.taxonConcept=concepto del taxón
-identifierType.taxonConcept.detail=Un identificador para una definición del taxón y su relación con otros taxones
+identifierType.name.detail=Un identificador del nombre científico de un taxon
+identifierType.taxon=taxon
+identifierType.taxon.detail=Un identificador de la información actual sobre un taxon
+identifierType.taxonConcept=concepto del taxon
+identifierType.taxonConcept.detail=Un identificador para una definición del taxon y su relación con otros taxones
 identifierType.vernacular=nombre vernáculo
-identifierType.vernacular.detail=Un identificador de un nombre vernáculo (común) para un taxón
+identifierType.vernacular.detail=Un identificador de un nombre vernáculo (común) para un taxon
 
 taxonomicStatus.accepted=Aceptado
 taxonomicStatus.accepted.annotation=aceptado
-taxonomicStatus.accepted.detail=El estado de un taxón según el juicio taxonómico de una autoridad citada
+taxonomicStatus.accepted.detail=El estado de un taxon según el juicio taxonómico de una autoridad citada
 taxonomicStatus.accepted.format=<span class\="accepted-name">{0}</span>
 taxonomicStatus.doubtful=Dudoso
 taxonomicStatus.doubtful.annotation=dudoso
@@ -332,7 +332,7 @@ taxonomicStatus.proParteSynonym.detail=Algunos especímenes de la serie del tipo
 taxonomicStatus.proParteSynonym.format=<span class\="proparte-name synonym-name">{0}<span class\="accepted-name">(pro-parte&nbsp;nombre&nbsp;aceptado&nbsp;{1})</span></span>
 taxonomicStatus.misapplied=Usado incorrectamente
 taxonomicStatus.misapplied.annotation=usado incorrectamente
-taxonomicStatus.misapplied.detail=Un nombre que ha sido aplicado incorrectamente a otro taxón en una publicación
+taxonomicStatus.misapplied.detail=Un nombre que ha sido aplicado incorrectamente a otro taxon en una publicación
 taxonomicStatus.misapplied.format=<span class\="misapplied-name">{0}<span class\="accepted-name">(aplicado incorrectamente&nbsp;a&nbsp;{1})</span></span>
 taxonomicStatus.miscellaneousliterature=Literatura Diversa
 taxonomicStatus.miscellaneousLiterature=Literatura Diversa
@@ -367,3 +367,114 @@ page.index.title=Búsqueda | {0}
 
 page.species.index.heading=Busqueda de especies en {0}
 page.species.index.title=Búsqueda de especies | {0}
+
+# Page search specie profile
+search.title.search=Buscar
+search.autocomplete.placeholder=Buscar especies, juegos de datos, y más...
+search.title.main-btn=Buscar
+search.for.title=Búsqueda de <strong>{0}</strong> obtuvo {1} resultados.
+search.more=Más
+search.resultFine=Refinar resultados
+search.for=Búsqueda de
+search.returned=obtuvo
+search.results=resultados
+search.related=Búsquedas relacionadas
+search.download=Descargar
+search.results.page=Resultados por página
+search.sort.by=Ordenar por
+search.sort.taxon=rango taxonómico
+search.sort.common=nombre común
+search.sort.scientific=nombre científico
+search.sort.match=mejor resultado
+search.sort.order=Orden de clasificación
+search.sort.order.ascending=ascendente
+search.sort.order.desceding=descendente
+search.sort.address=Dirección aquí
+search.details.occurrence=Registros:
+search.details.view.image=Ver imágenes de especies con este {0}
+search.all.records=todos los registros
+search.remove.filter=quitar filtro
+search.download.taxa.for.your.search=Descargue una lista de táxones para su búsqueda
+
+# Page overview
+overview.status.conservation=Estado de conservación
+overview.online.resources=Recursos en línea
+overview.datasets=Juegos de datos
+overview.map.occurrence.records.01=Mapa de registros de presencia
+overview.map.occurrence.records.02=registros
+overview.map.occurrence.compile.mapa.attribution=Mapa de distribución compilado
+overview.map.occurrence.mapa.attribution.01=Mapa de distribución compilado proporcionado por
+overview.map.occurrence.mapa.attribution.02=recursos de datos desconocido
+overview.map.submit.photo=Sube una foto
+overview.map.receive.alerts=Recibe alertas cuando se añadan nuevos registros
+overview.datasets.have.provided.data=<span class="datasetLabel">juegos de datos han</span> proporcionado datos para {0} para este {1}.
+overview.datasets.lists.01=Busca la lista de juegos de datos
+overview.datasets.lists.02=y busque organizaciones a las que pueda unirse si está interesado en participar en estudios de
+overview.datasets.species.of=especies de
+overview.datasets.species.like=especies como
+
+# Page of gallery
+gallery.title=No hay imágenes disponibles para este taxon
+gallery.description.01=Si tiene imágenes de este taxon que le gustaría compartir con el
+gallery.description.02=por favor súbalas usando las herramientas de subida
+gallery.button.collapse=Contraer
+gallery.button.expand=Expandir
+
+# Page of names
+names.title=Nombres y fuentes
+names.accepted.source=Fuente
+
+# Page of classification
+classification.title=Clasificación
+classification.download.child=Descargar táxones inferiores de
+classification.download.species=Descargas especies de
+classification.search.child=Descargar táxones inferiores de
+
+# Page of images
+images.specie=especies
+images.for=Imagenes de
+images.of=Imagenes de
+images.from=de
+images.species=Imágenes de especies
+images.load.more=Cargar más imágenes
+images.more.information.on.this.0=Más información de este {0}
+
+# Page of records
+records.list.all.records.button=Ver lista de todos los registros de ocurrencia de este taxon
+records.list.all.map.button=Ver mapa de todos los registros de ocurrencia de este taxon
+records.title=Gráficos que muestran el desglose de los registros de sucesos
+records=registros
+
+# Page of show
+show.name.authority=Nombre de la autoridad
+show.source=Fuente
+show.rights.holder=Titular de derechos
+show.provided.by=Proporcionado por
+show.main.image=Imagen principal
+show.main.audio=Audio principal
+show.name=Nombre
+show.attribution=Atribución
+show.licence=Licencia
+show.main.video=Video principal
+show.ok=OK
+
+# Page of bhl
+bhl.title.bhl=Biodiversity Heritage Library
+bhl.title.trove=Trove
+bhl.reference.found.bhl=Referencias de nombres encontrados en el
+bhl.reference.found.trove=Referencias de nombre encontradas en
+bhl.search=Búsqueda en BHL
+bhl.search.bhl=Biodiversity Heritage Library
+bhl.search.wait=Buscando, espere por favor...
+
+# Page of data partners
+data.partners.data.sets=Conjuntos de datos
+data.partners.data.licenca=Licencia
+data.partners.data.records=Registros
+
+home=Inicio
+
+error.main.title=Ha ocurrido un error | Especies
+
+page.not.found.title=Página no encontrada
+page.error.page.not.found.desc=Error: Página no encontrada (404)
