--- a/grails-app/i18n/messages_pt_BR.properties
+++ b/grails-app/i18n/messages_pt_BR.properties
@@ -377,16 +377,14 @@ overview.map.occurrence.mapa.attribution.02=recurso de dados desconhecido
 overview.map.record.sighting=Registrar uma observação
 overview.map.submit.photo=Enviar uma foto
 overview.map.receive.alerts=Receba alertas quando novos registros forem adicionados
-overview.datasets.count.have=Conjunto de dados que 
-overview.datasets.count.provided=forneceu dados para o 
-overview.datasets.count.for=para esta
+overview.datasets.have.provided.data=<span class="datasetLabel">Conjunto de dados que</span> forneceu dados para o  {0} para esta {1}.
 overview.datasets.lists.01=Navegue pela lista de conjuntos de dados
 overview.datasets.lists.02=e encontre organizações que você possa participar se estiver interessado em participar de uma pesquisa para
 overview.datasets.species.of=espécies de
 overview.datasets.species.like=espécies como
 
 # Page of gallery
-gallery.titulo=Não há imagens disponíveis para este táxon
+gallery.title=Não há imagens disponíveis para este táxon
 gallery.description.01=Se você tiver imagens para esse táxon com as quais gostaria de compartilhar
 gallery.description.02=por favor, faça o upload usando as ferramentas de upload.
 gallery.button.collapse=Ocultar
@@ -399,7 +397,7 @@ names.accepted.source=Fonte
 # Page of classification
 classification.title=Classificação
 classification.download.child=Download táxons filhos de
-classification.download.especies=Download espécies de
+classification.download.species=Download espécies de
 classification.search.child=Pesquisar por taxóns filhos de
 
 # Page of images
@@ -408,6 +406,7 @@ images.for=Imagens para
 images.of=Imagens de
 images.from=de
 images.species=Imagens espécies
+images.load.more=Carregar mais imagens
 
 # Page of records
 records.list.all.records.button=Veja a lista de todos os registros de ocorrência para este táxon
