Image search restore indentation and title

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -433,6 +433,7 @@ classification.download.species=Download species of
 classification.search.child=Search for child taxa of
 
 # Page of images
+images.search.title=Image browser
 images.specie=species
 images.for=Images for
 images.of=Images of
