--- a/grails-app/i18n/messages_es.properties
+++ b/grails-app/i18n/messages_es.properties
@@ -362,7 +362,7 @@ page.bhl.none=No se han encontrado resultados para {0}
 page.bhl.showing=Mostrando de {0} a {1} de {2} para {3}
 page.bhl.title=Biodiversity Heritage Library (BHL)
 
-page.index.heading=Buscar en el {0}
+page.index.heading=Buscar en {0}
 page.index.title=Búsqueda | {0}
 
 page.species.index.heading=Busqueda de especies en {0}
