internationalisation i18n changes 01 version

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -118,6 +118,7 @@ imageAvailable.false=No
 imageAvailable.yes=Yes
 imageAvailable.true=Yes
 
+rank.unknown=unknown
 rank.kingdom=Kingdom
 rank.phylum=Phylum
 rank.order=Order
@@ -219,6 +220,25 @@ images.heading.specimen=Specimens
 images.heading.other=Images
 images.heading.uncertain=Misidentified
 
+overview.map.occurrence.map=Occurrence records map
+overview.map.occurrence.records=records
+overview.map.alert=Receive alerts when new records are added
+
+overview.map.datasets.title=datasets
+
+overview.datasets.descr01a=datasets have provided data to the
+overview.datasets.descr01b=dataset has provided data to the
+overview.datasets.descr02=for this
+overview.datasets.descr03=
+overview.datasets.descr04=
+
+overview.datasets.descr.survey01=Browse the list of datasets
+overview.datasets.descr.survey02=and find organisations you can join if you are interested in participating in a survey for
+
+gallery.noimages=No images available for this taxon
+gallery.noimages.descr01=If you have images for this taxon that you would like to share with
+gallery.noimages.descr02=please upload using the upload tools.
+
 overview.map.button.records.list=View records
 overview.map.button.records.simplemap=View simple map
 overview.map.button.records.map=View interactive map
@@ -271,6 +291,7 @@ identifierType.taxonConcept.detail=An identifier for a taxon definition and its 
 identifierType.vernacular=vernacular name
 identifierType.vernacular.detail=An identifier for a vernacular (common) name for a taxon
 
+taxonomicStatus.species=species
 taxonomicStatus.accepted=Accepted
 taxonomicStatus.accepted.annotation=accepted
 taxonomicStatus.accepted.detail=The status of a taxon according to the taxonomic judgement of a cited authority
@@ -369,3 +390,78 @@ page.index.title=Search | {0}
 
 page.species.index.heading=Search the {0} for species
 page.species.index.title=Species search | {0}
+
+names.title=Names and sources
+names.source=Source
+
+classification.download.childtaxa01=Download child taxa of
+classification.download.childtaxa02=
+classification.download.speciesof01=Download species of
+classification.download.speciesof02=
+classification.download.searchchildtaxa01=Search for child taxa of
+classification.download.searchchildtaxa02=
+
+classification.title02=classification
+
+charts.title.breakdown01=Charts showing breakdown of occurrence records (
+charts.title.breakdown02=records)
+
+charts.button.viewlist01=View list of all occurrence records for this taxon 
+charts.button.viewlist02=records)
+
+charts.button.viewMap01=View map of all occurrence records for this taxon
+charts.button.viewMap02=records)
+
+literature.title.references=Name references found in
+
+sequences.viewresults=View all results - Items 
+datapartners.datasets=Data sets
+datapartners.licence=Licence
+datapartners.records=Records
+
+overview.conservationstatus=Conservation Status
+overview.onlineresources=Online Resources
+
+search.searchfor=Search for 
+search.returned=returned
+search.results=results
+
+search.relatedsearches=Related Searches
+search.resultsperpage=Results per page
+search.sortby=Sort by
+search.sortorder=Sort order
+search.descending=descending
+search.ascending=ascending
+
+search.bestmatch=best match
+search.scientificname=scientific name
+search.commonname=common name
+search.taxonrank=taxon rank
+
+search.viewimages01=View images of species within this
+search.viewimages02=
+
+search.more=More
+search.less=Less
+
+search.occurrencere.records=Occurrence records
+
+imagesearch.imagesof=Images of
+imagesearch.species=species
+imagesearch.from=from
+
+imagesearch.imagesfor=Images for
+imagesearch.speciesimages=Species images
+
+search.searchresults=Search results
+search.search=Search
+search.refineresults=Refine results
+
+search.commonNameLanguage=English name
+search.occurrences=Occurrences:
+
+search.everything=all records
+
+search.download=downloads
+search.downloadalist=Download a list of taxa for your search
+
