--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -1,4 +1,4 @@
-site.title=Atlas of Living Luxembourg
+site.title=Biodiversitäts-Atlas Österreich
 
 label.acceptedName=Akzeptierter Name
 label.acceptedName.detail=Der Name, der derzeit für dieses Taxon verwendet wird
@@ -8,18 +8,18 @@ label.commonName=Allgemeiner Name
 label.commonName.detail=Trivialname (nicht-wissenschaftlicher Name) für dieses Taxon. Diese Namen sind nicht zwangsläufig eindeutig und mehrere Taxa haben möglicherweise denselben Namen.
 label.countryCode.vernacular=Land
 label.countryCode.vernacular.detail=Dieser Name wird in einem bestimmten Land verwendet
-label.data-partners=Datenpartner
+label.data-partners=Datenpartner_innen
 label.gallery=Galerie
-label.identifier=Bezeichner
+label.identifier=Identifier
 label.identifier.detail=Codes die von verschiedenen Quellen für die Identifizierung von Taxon und Taxonname verwendet wird. Einige Bezeichner sind historisch.
 label.in=in
 label.indigenous-info=Indigene Information
 label.isPlural.vernacular=Plural
-label.isPlural.vernacular.detail=Dieser Name ist die Pluralform
-label.lifeStage.vernacular=Lebensstadium
-label.lifeStage.vernacular.detail=Dieser Name wird für ein bestimmtes Lebensstadium verwendet
+label.isPlural.vernacular.detail=Bei diesem Namen handelt es sich um die Pluralform
+label.lifeStage.vernacular=Entwicklungsstadium
+label.lifeStage.vernacular.detail=Dieser Name wird für ein bestimmtes Entwicklungsstadium verwendet
 label.literature=Literatur
-label.locality.vernacular=Standort
+label.locality.vernacular=Gebiet
 label.locality.vernacular.detail=Dieser Name wird in einer bestimmten geografischen Region oder einem bestimmten Gebiet verwendet
 label.nameAccordingTo=Nach\:
 label.namePublishedIn=Veröffentlicht in\:
@@ -28,12 +28,12 @@ label.name.detail=Varianten dieses Namens aus verschiedenen Quellen
 label.names=Namen
 label.organismPart.vernacular.detail=Dieser Name wird für einen bestimmten Teil des Lebewesens verwendet
 label.overview=Übersicht
-label.records=Dateneinträge
+label.records=Daten
 label.recordSighting=Eine Beobachtung melden
-label.no.records.found=Keine Einträge gefunden
+label.no.records.found=Keine Daten gefunden
 label.referencedIn=Verweis in\:
 label.search=Suchen
-label.searchAtlas=Suchen Sie Arten, Datensätze und mehr ...
+label.searchAtlas=Suchen Sie Arten, Datensets, Datenpartner_innen und mehr ...
 label.searchSpecies=Arten suchen
 label.sequences=Sequenzen
 label.sex.vernacular=Geschlecht
@@ -49,8 +49,8 @@ label.temporal.vernacular.detail=Dieser Name wird während einer bestimmten Zeit
 facet.TAXON=Arten
 facet.INSTITUTION=Institutionen
 facet.COLLECTION=Sammlungen
-facet.DATAPROVIDER=Datenprovider
-facet.DATASET=Datensätze
+facet.DATAPROVIDER=Datenpartner_innen
+facet.DATASET=Datensammlungen
 facet.DATARESOURCE=Datensätze
 facet.LAYER=Spatial Layer
 facet.REGION=Regionen
@@ -60,17 +60,17 @@ facet.TAXONVARIANT=Quellangaben Arten
 facet.Rank=Taxonomische Rangstufe
 facet.rank=Taxonomische Rangstufe
 facet.pestStatus=Status als Schädling
-facet.conservationStatus=Schutzstatus
+facet.conservationStatus=Gefährdungsstatus
 facet.PublicationType=Publikationsform
-facet.kingdom=Königreich
-facet.idxtype=Abteilung
-facet.australian_s=Kommt in Australien vor
+facet.kingdom=Reich
+facet.idxtype=Typ
+facet.australian_s=Kommt in Österreich vor
 facet.categories=Kategorie
 facet.speciesSubgroup=Artengruppe
-facet.isLocatedInHubCountry_b=Kommt in Australien vor
-facet.locatedInHubCountry=Kommt in Australien vor
+facet.isLocatedInHubCountry_b=Kommt in Österreich vor
+facet.locatedInHubCountry=Kommt in Österreich vor
 facet.hasImage=Bild verfügbar
-facet.authority_s=Namesquelle
+facet.authority_s=Quelle
 facet.dataset=Checkliste
 facet.establishmentMeans_s=Etablierungsstatus
 facet.taxonomicStatus_s=Taxonomischer Status
@@ -79,10 +79,10 @@ facet.speciesGroup=Lebensform
 facet.imageAvailable=Bild verfügbar
 facet.taxonomicStatus=Taxonomischer Status
 facet.establishmentMeans=Etablierungsstatus
-facet.datasetName=Datensatz
-facet.taxonGroup_s=Taxon-Gruppe
+facet.datasetName=Datensammlung
+facet.taxonGroup_s=Artengruppe
 
-facet.conservationStatusAUS=Schutzstatus in Australien
+facet.conservationStatusAUS=Gefährdungsstatus in Österreich
 facet.conservationStatusACT=Schutzstatus in ACT
 facet.conservationStatusNSW=Schutzstatus in NSW
 facet.conservationStatusNT=Schutzstatus in NT
@@ -103,10 +103,12 @@ facet.category_WA_m_s=WA-Kategorie
 facet.category_NT_m_s=NT-Kategorie
 
 favourite.favourite=<span class\="glyphicon glyphicon-thumbs-up"></span>
-favourite.favourite.detail=Liebelingsarten
+favourite.favourite.detail=Favouriten
 favourite.iconic=<span class\="glyphicon glyphicon-thumbs-up"></span>
 favourite.iconic.detail=Typische Arten
+favourite.interest=
 favourite.interest.detail=Arten von Interesse
+favourite.preferred=
 favourite.preferred.detail=Bevorzugte Arten
 
 isLocatedInHubCountry_b.true=Ja
@@ -116,24 +118,25 @@ imageAvailable.false=Nein
 imageAvailable.yes=Ja
 imageAvailable.true=Ja
 
-rank.kingdom=Königreich
+rank.unknown=unbekannt
+rank.kingdom=Reich
 rank.phylum=Phylum
 rank.order=Ordnung
 rank.family=Familie
-rank.genus=Genus
+rank.genus=Gattung
 rank.species=Art
 rank.subspecies=Unterart
 rank.variety=Varietät
 rank.(rank\ not\ specified)=(Rang nicht angegeben)
 rank.subgenus=Untergattung
 rank.cultivar=Cultivar
-rank.section=Abschnitt
+rank.section=Sektion
 rank.subfamily=Unterfamilie
 rank.tribe=Tribus
 rank.series=Serie
 rank.superfamily=Überfamilie
 rank.subtribe=Untertribus
-rank.subsection=Unterabschnitt
+rank.subsection=Untersektion
 rank.suborder=Unterordnung
 rank.subseries=Unterserie
 rank.subvariety=Untervarietät
@@ -153,7 +156,7 @@ rank.subphylum/subdivision=Unterstamm/Unterabteilung
 rank.infraclass=Infraklasse
 rank.null=(nicht angegeben)
 rank.superclass=Superklasse
-rank.form=Formular
+rank.form=Form
 rank.Incertae\ Sedis\ (uncertain\ rank)=Incertae Sedis (unsicherer Rang)
 rank.Species\ Inquirenda\ (doubtful\ identity)=Species Inquirenda (zweifelhafte Identität)
 rank.cohort=Kohorte
@@ -162,12 +165,12 @@ rank.division=Abteilung
 idxtype.TAXON=Art
 idxtype.INSTITUTION=Institution
 idxtype.COLLECTION=Sammlung
-idxtype.DATAPROVIDER=Datenprovider
-idxtype.DATASET=Datensatz
-idxtype.DATARESOURCE=Datenbestand
+idxtype.DATAPROVIDER=Datenpartner_in
+idxtype.DATASET=Datensammlung
+idxtype.DATARESOURCE=Datensatz
 idxtype.KNOWLEDGEBASE=Hilfeseite
 idxtype.REGION=Region
-idxtype.LOCALITY=Standort
+idxtype.LOCALITY=Gebiet
 idxtype.WORDPRESS=Website
 idxtype.LAYER=Spatial Layer
 idxtype.COMMON=Allgemeiner Name
@@ -188,7 +191,7 @@ region.Tasmania=TAS
 region.IUCN=IUCN
 region.=IUCN
 
-conservationStatusAUS=Schutzstatus in Australien
+conservationStatusAUS=Gefährdungsstatus in Österreich
 conservationStatusACT=Schutzstatus in ACT
 conservationStatusNSW=Schutzstatus in NSW
 conservationStatusNT=Schutzstatus in NT
@@ -200,44 +203,63 @@ conservationStatusWA=Schutzstatus in WA
 scientificNameRaw=Wissenschaftlicher Name
 nameComplete=Wissenschaftlicher Name
 commonNameSingle=Allgemeiner Name
-rank=Taxon Rang
-kingdom=Königreich
+rank=Taxonomischer Rang
+kingdom=Reich
 phylum=Phylum
 class=Klasse
 bioOrder=Ordnung
 family=Familie
-genus=Genus
+genus=Gattung
 imageUrl=Bild
 pestStatus=Status als Schädling
 author=Autor
 acceptedConceptName=Wissenschaftlicher Name für gültiges Konzept
 
 images.heading.type=Typen
-images.heading.specimen=Spezimene
+images.heading.specimen=Objekte
 images.heading.other=Bilder
 images.heading.uncertain=Fehlbestimmt
 
-overview.map.button.records.list=Beobachtungen anzeigen
-overview.map.button.records.simplemap=Einfache Karte anzeigen
-overview.map.button.records.map=Interaktive Karte anzeigen
+overview.map.occurrence.map=Karte mit Funddaten
+overview.map.occurrence.records=Daten
+overview.map.alert=Bei neuen Funddaten benachrichtigt werden
 
-overview.map.button.records.list.title=Eine Liste der Beobachtungen für dieses Taxon anzeigen
+overview.datasets.title=Datensets
+
+overview.datasets.descr01a=Datensammlungen
+overview.datasets.descr01b=Datensammlung
+overview.datasets.descr02=für diese
+overview.datasets.descr03=stammen aus
+overview.datasets.descr04=Die Daten im
+
+overview.datasets.descr.survey01=Durchsuchen sie die Liste von Datensammlungen
+overview.datasets.descr.survey02=und erfahren sie mehr über die Datenpartner_innen, die diese zur Verfügung gestellt haben
+
+gallery.noimages=Für dieses Taxon sind keine Bilder verfügbar
+gallery.noimages.descr01=gallery.noimages.descr01=Wenn Sie Bilder für dieses Taxon haben und diese mit dem Biodiversitäts-Atlas Österreich
+gallery.noimages.descr02=teilen möchten, laden Sie diese mittels des Upload-Tools in den Atlas.
+
+overview.map.button.records.list=Funddaten anzeigen
+overview.map.button.records.simplemap=Einfache Karte anzeigen
+overview.map.button.records.map=Im Spatial Portal anzeigen
+
+overview.map.button.records.list.title=Liste der Funddaten für dieses Taxon anzeigen
 overview.map.button.records.simplemap.title=Eine einfache Karte der Beobachtungen für dieses Taxon anzeigen
-overview.map.button.records.map.title=Daten für dieses Taxon mithilfe von erweiterten Kartenwerkzeugen analysieren
+overview.map.button.records.map.title=Funddaten des Taxons mithilfe von erweiterten Analysewerkzeugen im Spatial Portal analysieren
 
 show.json=JSON
 show.rdf=RDF
 show.view.json.title=JSON-Dokument anzeigen (Datenaustausch-Format)
-show.australian.species=Australische Arten
+show.australian.species=Österreichische Arten
 
-commonStatus.common=gemein
+commonStatus.common=allgemein
 commonStatus.common.detail=Ein üblicher allgemeiner Name für diese Art
 commonStatus.legislated=gesetzlich
-commonStatus.legislated.detail=Ein Name, der in der Gesetzgebung als Bezeichnung für die Art erscheint
-commonStatus.local=lokal
-commonStatus.local.detail=Ein lokal verwendeter Name für diese Art
+commonStatus.legislated.detail=Artname der in der Gesetzgebung verwendet wird
+commonStatus.local=regional
+commonStatus.local.detail=Ein regional verwendeter Name für diese Art
 commonStatus.preferred=bevorzugt
-commonStatus.preferred.detail=Der bevorzugte umgangssprachliche Name für diese Art
+commonStatus.preferred.detail=Der bevorzugte allgemeine Name für diese Art
 commonStatus.standard=standard
 commonStatus.standard.detail=Name der in offiziellen Dokumenten für diese Art verwendet wird
 commonStatus.traditionalKnowledge=traditionelles Wissen
@@ -245,7 +267,7 @@ commonStatus.traditionalKnowledge.detail=Traditionell verwendeter Name
 
 
 identifierFormat.lsid=lsid
-identifierFormat.lsid.detail=Ein Bezeichner im Life Sciences Indentifier-Format (LSID)
+identifierFormat.lsid.detail=Ein Bezeichner im Life Sciences Identifier-Format (LSID)
 identifierFormat.url=url
 identifierFormat.url.detail=Ein Bezeichner, der eine auflösbare URL ist
 
@@ -280,7 +302,7 @@ taxonomicStatus.doubtful.format=<span class\="doubtful-name">{0}</span>
 taxonomicStatus.excluded=Ausgeschlossen
 taxonomicStatus.excluded.annotation=ausgeschlossen
 taxonomicStatus.excluded.detail=Ein Name, der in einer Region nicht vorkommt
-taxonomicStatus.excluded.format=<span class\="excluded-name">{0}&nbsp;- entfernter&nbsp;Name</span>
+taxonomicStatus.excluded.format=<span class\="excluded-name">{0}&nbsp;- ausgeschlossener&nbsp;Name</span>
 taxonomicStatus.homotypicsynonym=Homotypisches Synonym
 taxonomicStatus.homotypicSynonym=Homotypisches Synonym
 taxonomicStatus.homotypicSynonym.annotation=homotypisch
@@ -354,9 +376,9 @@ taxonomicStatus.synonym.detail=Ein Name, der ein Synonym für den akzeptierten N
 taxonomicStatus.synonym.format=<span class\="synonym-name">{0} <span class\="accepted-name">(gültiger&nbsp;Name\:&nbsp;{1})</span></span>
 taxonomicStatus.unplaced=Unbestimmt
 taxonomicStatus.unplaced.annotation=unbestimmt
-taxonomicStatus.unplaced.detail=Ein wissenschaftlicher Name der keiner Systematik zugeteilt ist
+taxonomicStatus.unplaced.detail=Ein wissenschaftlicher Name der keiner Systematik zugeordnet ist
 taxonomicStatus.unplaced.format=<span class\="unplaced-name">{0}</span>
-no.records.found=Keine Beobachtungsdaten gefunden
+no.records.found=Keine Funddaten gefunden
 
 page.bhl.none=Keine Ergebnisse für {0} gefunden
 page.bhl.showing=Zeige {0} bis {1} von {2} bis {3} Einträgen
@@ -367,3 +389,78 @@ page.index.title=Suchen | {0}
 
 page.species.index.heading={0} nach Arten durchsuchen
 page.species.index.title=Artensuche | {0}
+
+names.title=Namen und Quellen
+names.source=Quelle
+
+classification.download.childtaxa01=Child Taxa von 
+classification.download.childtaxa02=herunterladen
+classification.download.speciesof01=Arten von 
+classification.download.speciesof02=herunterladen
+classification.download.searchchildtaxa01=Nach Child Taxa von
+classification.download.searchchildtaxa02=suchen
+
+classification.title02=Klassifikation
+
+charts.title.breakdown01=Aufschlüsselung der Funddaten als interaktive Grafiken (
+charts.title.breakdown02=Daten)
+
+charts.button.viewlist01=Liste mit allen Funddaten für dieses Taxon anzeigen (
+charts.button.viewlist02=Daten)
+
+charts.button.viewMap01=Karte mit allen Funddaten für dieses Taxon anzeigen (
+charts.button.viewMap02=Daten)
+
+literature.title.references=Namensreferenzen in der
+
+sequences.viewresults=Alle Ergebnisse anzeigen - Anzahl
+
+datapartners.datasets=Datensets
+datapartners.licence=Lizenz
+datapartners.records=Funddaten
+
+overview.conservationstatus=Gefährdungsstatus
+overview.onlineresources=Onlineressourcen
+
+search.searchfor=Die Suche nach
+search.returned=ergab
+search.results=Ergebnisse
+
+search.relatedsearches=Verwandte Suchen
+search.resultsperpage=Ergebnisse pro Seite
+search.sortby=Sortieren nach
+search.sortorder=Ordnen nach
+search.descending=Absteigend
+search.ascending=Aufsteigend
+
+search.bestmatch=Beste Übereinstimmung
+search.scientificname=Wissenschaftlicher Name
+search.commonname=Allgemeiner Name
+search.taxonrank=Taxonomischer Rang
+
+search.viewimages01=Bilder von Arten innerhalb dieser
+search.viewimages02=ansehen
+
+search.more=Mehr
+search.less=Weniger
+
+search.occurrence.records=Funddaten
+
+imagesearch.imagesof=Bilder von
+imagesearch.species=Arten
+imagesearch.from=von
+
+imagesearch.imagesfor=Bilder für
+imagesearch.speciesimages=Bilder von Arten
+
+search.searchresults=Suchergebnisse
+search.search=Suchen
+search.refineresults=Ergebnisse filtern
+
+search.commonName.Language=Deutscher Name
+search.occurrences=Funddaten:
+
+search.everything=allen Daten
+
+search.download=Download
+search.downloadalist=Taxonomieliste aus ihrer Suche herunterladen
