--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -465,3 +465,10 @@ search.everything=all records
 search.download=downloads
 search.downloadalist=Download a list of taxa for your search
 
+eol.description.photographer=Photographer
+eol.description.rightsholder=Rights holder
+eol.description.supplyedby=Supplied by
+
+eol.description.type=Type
+eol.description.by=By
+eol.description=Date
