--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -464,3 +464,11 @@ search.everything=allen Daten
 
 search.download=Download
 search.downloadalist=Taxonomieliste aus ihrer Suche herunterladen
+
+eol.description.photographer=Fotograf
+eol.description.rightsholder=Rechtsinhaber
+eol.description.supplyedby=Zur Verfügung gestellt von
+
+eol.description.type=Typ
+eol.description.by=von
+eol.description=Datum
