Report a sighting Popup on bie-plugin and alastyle.css Links to a number of portals where you can report (iNaturalist, ...)

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -1,4 +1,6 @@
-site.title=Atlas of Living Australia
+site.title=Biodiversity atlas Austria
+
+index.title=Search in the Atlas 
 
 label.acceptedName=Accepted Name
 label.acceptedName.detail=The name currently used for this taxon
@@ -30,6 +32,7 @@ label.organismPart.vernacular.detail=This name is used for a specific part of th
 label.overview=Overview
 label.records=Records
 label.recordSighting=Record a sighting
+label.recordSighting.descr=Below you find optional plattforms where you can report your sightings
 label.no.records.found=No records found
 label.referencedIn=Referenced in:
 label.search=Search
@@ -228,6 +231,7 @@ overview.map.datasets.title=datasets
 
 overview.datasets.descr01a=datasets have provided data to the
 overview.datasets.descr01b=dataset has provided data to the
+overview.datasets.descr01d=for this
 overview.datasets.descr02=for this
 overview.datasets.descr03=
 overview.datasets.descr04=
