--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -30,6 +30,7 @@ label.organismPart.vernacular.detail=Dieser Name wird für einen bestimmten Teil
 label.overview=Übersicht
 label.records=Daten
 label.recordSighting=Eine Beobachtung melden
+label.recordSighting.descr=Nachstehend finden Sie eine Auswahl an Meldeplattformen bei denen Sie Ihre Beobachtung(en) melden können
 label.no.records.found=Keine Daten gefunden
 label.referencedIn=Verweis in\:
 label.search=Suchen
