--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -118,48 +118,74 @@ imageAvailable.false=No
 imageAvailable.yes=Yes
 imageAvailable.true=Yes
 
-rank.kingdom=Kingdom
-rank.phylum=Phylum
-rank.order=Order
-rank.family=Family
-rank.genus=Genus
-rank.species=Species
-rank.subspecies=Subspecies
-rank.variety=Variety
 rank.(rank\ not\ specified)=(Rank not specified)
-rank.subgenus=Subgenus
-rank.cultivar=Cultivar
-rank.section=Section
-rank.subfamily=Subfamily
-rank.tribe=Tribe
-rank.series=Series
-rank.superfamily=Superfamily
-rank.subtribe=Subtribe
-rank.subsection=Subsection
-rank.suborder=Suborder
-rank.subseries=Subseries
-rank.subvariety=Subvariety
-rank.subclass=Subclass
+rank.Incertae\ Sedis\ (uncertain\ rank)=Incertae Sedis (uncertain rank)
+rank.Species\ Inquirenda\ (doubtful\ identity)=Species Inquirenda (doubtful identity)
+rank.anamorph=Anamorph
+rank.biovar=Biovar
 rank.class=Class
-rank.suprageneric\ tax_\ of\ undefined\ rank=Suprageneric taxon of undefined rank
-rank.suprageneric\ tax.\ of\ undefined\ rank=Suprageneric taxon of undefined rank
-rank.supragenericname=Subfamily
+rank.cohort=Cohort
+rank.cultivar=Cultivar
+rank.division=Division
+rank.division\ zoology=Division (Zoology)
+rank.family=Family
+rank.form=Form
+rank.forma\ specialis=Forma Specialis
+rank.genus=Genus
+rank.genus\ group=Genus Group
+rank.incertae\ sedis=Incertae Sedis (uncertain rank)
+rank.informal=Informal
+rank.infraclass=Infraclass
+rank.infrafamily=Infrafamily
 rank.infraorder=Infraorder
 rank.infraspecific=Infraspecific
 rank.infraspecificname=Infraspecific Name
-rank.subspecies\ aggregate=Subspecies Aggregate
-rank.supertribe=Supertribe
-rank.phylum/division=Phylum/Division
-rank.superorder=Superorder
-rank.subphylum/subdivision=Subphylum/Subdivision
-rank.infraclass=Infraclass
+rank.kingdom=Kingdom
+rank.nothovariety=Nothovariety
 rank.null=(not specified)
+rank.order=Order
+rank.pathovar=Pathovar
+rank.phylum/division=Phylum/Division
+rank.phylum=Phylum
+rank.section=Section
+rank.section\ botany=Section (Botany)
+rank.section\ zoology=Section (Zoology)
+rank.series=Series
+rank.series\ botany=Series (Botany)
+rank.serovar=Serovar
+rank.species=Species
+rank.species\ group=Species Group
+rank.species\ inquirenda=Species Inquirenda (doubtful identity)
+rank.subclass=Subclass
+rank.subdivision\ zoology=Subdivision (Zoology)
+rank.subfamily=Subfamily
+rank.subform=Subform
+rank.subgenus=Subgenus
+rank.subinfraclass=Subinfraclass
+rank.subkingdom=Subkingdom
+rank.suborder=Suborder
+rank.subphylum/subdivision=Subphylum/Subdivision
+rank.subphylum=Subphylum
+rank.subsection=Subsection
+rank.subsection\ botany=Subsection (Botany)
+rank.subsection\ zoology=Subsection (Zoology)
+rank.subseries=Subseries
+rank.subseries\ botany=Subseries (Botany)
+rank.subspecies=Subspecies
+rank.subspecies\ aggregate=Subspecies Aggregate
+rank.subtribe=Subtribe
+rank.subvariety=Subvariety
 rank.superclass=Superclass
-rank.form=Form
-rank.Incertae\ Sedis\ (uncertain\ rank)=Incertae Sedis (uncertain rank)
-rank.Species\ Inquirenda\ (doubtful\ identity)=Species Inquirenda (doubtful identity)
-rank.cohort=Cohort
-rank.division=Division
+rank.superfamily=Superfamily
+rank.superorder=Superorder
+rank.superspecies=Superspecies
+rank.supertribe=Supertribe
+rank.suprageneric\ tax.\ of\ undefined\ rank=Suprageneric taxon of undefined rank
+rank.suprageneric\ tax_\ of\ undefined\ rank=Suprageneric taxon of undefined rank
+rank.supragenericname=Subfamily
+rank.tribe=Tribe
+rank.unranked=Unranked
+rank.variety=Variety
 
 idxtype.TAXON=Species
 idxtype.INSTITUTION=Institution
